syntax = "proto3";
package wice;

option go_package = "riasc.eu/wice/pkg/pb";

import "common.proto";
import "event.proto";
import "interface.proto";

message Status {
    repeated Interface interfaces = 1;
}

message UnWaitParams {}
message SyncConfigParams {}
message SyncInterfaceParams {}
message StopParams {}
message StreamEventsParams {}

service Socket {
    rpc GetStatus(Void) returns (Status) {}
    rpc StreamEvents(StreamEventsParams) returns (stream Event) {}

    rpc UnWait(UnWaitParams) returns (Error) {}
    rpc Stop(StopParams) returns (Error) {}
    
    rpc SyncConfig(SyncConfigParams) returns (Error) {}
    rpc SyncInterfaces(SyncInterfaceParams) returns (Error) {}

    // rpc AddInterface(Interface) returns (Error) {}
    // rpc RemoveInterface(Interface) returns (Error) {}
    
    // rpc AddPeer(Peer) returns (Error) {}
}
